--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@nuxt/content": "^1.14.0",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "prism-themes": "^1.9.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.2.1",
